# SAN

./: .gitignore
2014 letni/Algorytmy/: .project
2014 letni/Allegro/: .classpath  .project
2014 letni/Dziekanat/: .classpath  .project
2014 letni/ZUS/: .classpath  .project
2014 zimowy/Podyplomowe JEE/: postgres-init.sql
2014 zimowy/Programowanie wspolbiezne/Eshop/: Eshop.cabal  cabal.sandbox.config  lint.sh  sandbox-init.sh
2014 zimowy/Programowanie wspolbiezne/Eshop/Eshop/: Core.hs
2014 zimowy/Programowanie wspolbiezne/Eshop/examples/: Main.hs  cabal.sandbox.config  examples.cabal  sandbox-init.sh
2014 zimowy/Sztuczna inteligencja/: tree.hs
2014 zimowy/Warstwy integracji/: Main.hs  Obliczenia.hs  Webrules.hs  założenia
2015 letni (Spring) - 2018 zimowy (Fall)/PP-Fall-2018-2019/: .gitignore
2015 letni (Spring) - 2018 zimowy (Fall)/TP-Fall-2018-2019/: app.R  net.R
2015 letni (Spring) - 2018 zimowy (Fall)/WawaAISE/: EShop.vpp.bak_000f
2015 letni (Spring) - 2018 zimowy (Fall)/WebOne/: .project
2015 letni (Spring) - 2018 zimowy (Fall)/pf/: pf.cabal
2015 letni (Spring) - 2018 zimowy (Fall)/pf/clj1/: CHANGELOG.md  README.md  project.clj
2015 letni (Spring) - 2018 zimowy (Fall)/pf/clj1/doc/: intro.md
2015 letni (Spring) - 2018 zimowy (Fall)/pf/clj1/src/clj1/: core.clj
2015 letni (spring) - 2018 zimowy (fall)/PP-Fall-2018-2019/: Assignments-stationary.org
2015 letni (spring) - 2018 zimowy (fall)/pf/: README.md  lint.sh
2018 zimowy/Conc-Fall-2018-2019/: Zadania zaliczeniowe.org
2018 zimowy/PP-Fall-2018-2019/: Assignments-non-stationary.org
2018 zimowy/TP-Fall-2018-2019/: img.R  net.R
2018 zimowy/WawaJava2/: Object Oriented Programming - assignments.org  Principles of Programming - assignments.org
2018 zimowy/WebOne/: .classpath
2019 Wawa (Spring)/Introduction 2 WEB Tech/: Books.org
2019 Wawa (Spring)/OO/: Assignments.org
2019 Wawa/Introduction 2 WEB Tech/: Final Project.org
2019 letni (Spring)/Algorytmy i złożoność - stacjonarne/: Zadania.org
2019 letni (Spring)/JEE (IV sem.)/: deriv.clj
2019 zimowy/Conc/: Zadania zaliczeniowe.org
2019 zimowy/PP dzienne/: 2019-10-30 (W).org  Zadania na zaliczenie laboratorium.org
2019 zimowy/PP zjazdy/: Zadania na zaliczenie laboratorium.org
2019 zimowy/Sztuczna inteligencja/: Sztuczna inteligencja - tematy.org
2020 letni (Spring)/Clojure (PF)/: Zadania.org
2020 letni (Spring)/JiPP (dzienne)/: Zadania.org
2020 letni (Spring)/JiPP (niestacjonarne)/: Zadania.org
2020 letni (Spring)/JiPP-Maven/: .gitignore  bench.sh  cloc.excluded  cloc.sh  install.sh  pom.xml  run.sh  test.sh
2020 letni (Spring)/PCoAS/: .classpath  .project
2020 letni (Spring)/Python Programming (Clark)/: Assignments.org  Resources.org
2020 letni (Spring)/piksa (Spring)/: pom.xml
2021 letni/: Polimorfizm.org  Style programowania.org
2021 letni/BDiA/: pom.xml  run.sh  (+1 more)
2024 letni/: BDiA - pytania przykładowe.org  JiPP - pytania przykładowe.org  PiKSA - pytania przykładowe.org  Programowanie funkcyjne - pytania przykładowe.org  Systemy szkieletowe - pytania przykładowe.org
(+2020 files in other folders)
