name:                pf
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kongra/pf
license:             BSD3
license-file:        LICENSE
author:              SAN Students
maintainer:          kongra@gmail.com
copyright:           2017 SAN Students
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  ghc-options:         -O2 -W -Wall
                       -fllvm -optlo-O3
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable pf-exe
  ghc-options:         -O2 -W -Wall
                       -fllvm -optlo-O3
                       -fwarn-incomplete-uni-patterns
                       -fwarn-incomplete-record-updates
                       -funbox-strict-fields
                       -fwarn-tabs
                       -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , pf
  default-language:    Haskell2010

test-suite pf-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pf
  ghc-options:         -W -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kongra/pf
