name:                  Eshop
version:               0.1.0.0
license:               BSD3
license-file:          LICENSE
author:                Konrad Grzanek
maintainer:            kongra@gmail.com
build-type:            Simple
cabal-version:         >=1.10

library
  ghc-options:         -O2 -W -Wall -funbox-strict-fields
  if impl(ghc >= 6.8)
    ghc-options:       -fwarn-tabs

  exposed-modules:     Eshop.Core
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , stm >= 2.4.3
                     , unordered-containers >= 0.2.5.0
                     , hashable >= 1.2.2.0

  default-language:    Haskell2010